# MADP

./: .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  RELEASE-TODOs.txt  aclocal.m4  config.h.in  configure  configure.ac  travis_build_workaround.sh
src/: Makefile.am  Makefile.custom  Makefile.in
src/base/: Action.h  ActionDiscrete.h  Agent.h  CPDDiscreteInterface.h  CPDKroneckerDelta.h  CPT.cpp  CPT.h  DecPOMDP.cpp  DecPOMDP.h  DecPOMDPDiscrete.cpp  DecPOMDPDiscrete.h  DecPOMDPDiscreteInterface.h  DecPOMDPInterface.h  DiscreteEntity.h  E.h  EDeadline.h  EInvalidIndex.h  ENoSubScope.h  ENotCached.h  EOverflow.h  EParse.h  EventObservationModelMapping.cpp  EventObservationModelMapping.h  EventObservationModelMappingSparse.cpp  EventObservationModelMappingSparse.h  FSDist_COF.cpp  FSDist_COF.h  FactoredDecPOMDPDiscrete.cpp  FactoredDecPOMDPDiscrete.h  FactoredDecPOMDPDiscreteInterface.h  FactoredMMDPDiscrete.cpp  FactoredMMDPDiscrete.h  FactoredQFunctionScopeForStage.cpp  FactoredQFunctionScopeForStage.h  FactoredStateDistribution.cpp  FactoredStateDistribution.h  Globals.cpp  Globals.h  IndexTools.cpp  IndexTools.h  (+96 more)
src/boost/: README
src/examples/: .gitignore  Makefile.am  Makefile.in  example_BFS.cpp  example_DICEPS.cpp  example_FOBS_SPUDD_export.cpp  example_GMAA.cpp  example_JESP.cpp  example_MMDP_OnlineSolve.cpp  example_MMDP_SolveAndSimulate.cpp  example_Perseus.cpp  example_RandomBGs.cpp  example_decTigerJESP.cpp
src/include/: configuration.h  versions.h
src/libDAI/: FILEFORMAT  MADP_util.cpp  MADP_util.h  Makefile.am  Makefile.in  README  TODO  alldai.cpp  alldai.h  bipgraph.h  bounds.cpp  bounds.h  box.cpp  box.h  boxbp.cpp  boxbp.h  bp.cpp  bp.h  clustergraph.cpp  clustergraph.h  daialg.cpp  daialg.h  diffs.h  doxygen.conf  enum.h  exact.cpp  exact.h  example.cpp  exceptions.cpp  exceptions.h  factor.h  factorgraph.cpp  factorgraph.h  generic.h  graphicalmodel.h  hak.cpp  hak.h  ijgp.cpp  ijgp.h  index.h  (+27 more)
src/libpomdp-solve/: Makefile.am  Makefile.in
src/madp/: Makefile.am  Makefile.in
src/parser/: CommentBlankOrNewlineParser.h  CommentOrBlankParser.h  MADPParser.cpp  MADPParser.h  Makefile.am  Makefile.in  ParserDPOMDPFormat_Spirit.cpp  ParserDPOMDPFormat_Spirit.h  ParserDecPOMDPDiscrete.cpp  ParserDecPOMDPDiscrete.h  ParserInterface.h  ParserPOMDPDiscrete.cpp  ParserPOMDPDiscrete.h  ParserPOMDPFormat_Spirit.cpp  ParserPOMDPFormat_Spirit.h  ParserProbModelXML.cpp  ParserProbModelXML.h  ParserTOICompactRewardDecPOMDPDiscrete.cpp  ParserTOICompactRewardDecPOMDPDiscrete.h  ParserTOIDecMDPDiscrete.cpp  ParserTOIDecMDPDiscrete.h  ParserTOIDecPOMDPDiscrete.cpp  ParserTOIDecPOMDPDiscrete.h  ParserTOIFactoredRewardDecPOMDPDiscrete.cpp  ParserTOIFactoredRewardDecPOMDPDiscrete.h  sub_grammar_defs.h
src/planning/: AgentBG.cpp  AgentBG.h  AgentDecPOMDPDiscrete.h  AgentDelayedSharedObservations.h  AgentFullyObservable.h  AgentLocalObservations.h  AgentMDP.cpp  AgentMDP.h  AgentOnlinePlanningMDP.cpp  AgentOnlinePlanningMDP.h  AgentPOMDP.cpp  AgentPOMDP.h  AgentQLearner.cpp  AgentQLearner.h  AgentQMDP.cpp  AgentQMDP.h  AgentRandom.cpp  AgentRandom.h  AgentSharedObservations.h  AgentTOIFullyObservableSynced.h  AgentTOIFullyObservableSyncedSpecialReward.h  AlphaVector.cpp  AlphaVector.h  AlphaVectorBG.cpp  AlphaVectorBG.h  AlphaVectorConstrainedPOMDP.cpp  AlphaVectorConstrainedPOMDP.h  AlphaVectorPOMDP.cpp  AlphaVectorPOMDP.h  AlphaVectorPlanning.cpp  AlphaVectorPlanning.h  AlphaVectorPruning.cpp  AlphaVectorPruning.h  AlphaVectorWeighted.cpp  AlphaVectorWeighted.h  BGBackupType.h  BGCG_Solver.cpp  BGCG_Solver.h  BGCG_SolverCreator.cpp  BGCG_SolverCreator.h  (+269 more)
src/solvers/: .gitignore  BFS.cpp  DICEPS.cpp  DP-LPC.cpp  GMAA-IC  GMAA-ICE  GMAA.cpp  GMAA_ELSI.cpp  GMAA_ELSI.readme  JESP.cpp  MMDP_QLearner.cpp  MMDP_Solver.cpp  MMDP_VI.cpp  Makefile.am  Makefile.in  Perseus.cpp
src/support/: ActionHistory.cpp  ActionHistory.h  ActionHistoryTree.h  ActionObservationHistory.cpp  ActionObservationHistory.h  ActionObservationHistoryTree.cpp  ActionObservationHistoryTree.h  Belief.cpp  Belief.h  BeliefInterface.h  BeliefIterator.h  BeliefIteratorGeneric.h  BeliefIteratorInterface.h  BeliefIteratorSparse.h  BeliefSparse.cpp  BeliefSparse.h  FSAOHDist_NECOF.cpp  FSAOHDist_NECOF.h  FactoredStateAOHDistribution.cpp  FactoredStateAOHDistribution.h  FixedCapacityPriorityQueue.cpp  FixedCapacityPriorityQueue.h  History.h  IndividualBeliefJESP.cpp  IndividualBeliefJESP.h  IndividualHistory.h  Interface_ProblemToPolicyDiscrete.h  Interface_ProblemToPolicyDiscretePure.h  JPolComponent_VectorImplementation.cpp  JPolComponent_VectorImplementation.h  JointActionHistory.cpp  JointActionHistory.h  JointActionHistoryTree.h  JointActionObservationHistory.cpp  JointActionObservationHistory.h  JointActionObservationHistoryTree.cpp  JointActionObservationHistoryTree.h  JointBelief.cpp  JointBelief.h  JointBeliefEventDriven.cpp  (+80 more)
src/tests/: Makefile.am  Makefile.in  optimalValueDatabase  runBFS-DT.sh  runDICEPS-twoCorridors.sh  runGMAA-ELSI-QQBG-FFG.sh  runGMAA-GFSPC-BMP-ALoha.sh  runGMAA-GMAAstar-BBFS-QQMDPc-broadcastChannel.sh  runGMAA-GMAAstar-BBFS-QQPOMDP-Aloha.sh  runGMAA-GMAAstarClassic-QQBG-dectiger_skewed.sh  runGMAA-GMAAstarClassic-QQBGTreeIncPrune-relay4.sh  runGMAA-GMAAstarClassic-QQBGhybrid-recycling.sh  runGMAA-GMAAstarClassic-QQMDP_DecTiger.sh  runGMAA-IC-GMAAstar-BBnb-QQMDPc-FFF.sh  runGMAA-IC-GMAAstar-QQBGTreeIncPrune-dectiger.sh  runGMAA-IC-GMAAstar-QQBGav-prisoners.sh  runGMAA-IC-GMAAstarClassic-GBnB-QQBG-FFG.sh  runGMAA-ICE-GMAAstar-BBnB-QQBGav-2generals.sh  runGMAA-ICE-GMAAstar-DTPGMX.sh  runGMAA-ICE-GMAAstar-FFG343.sh  runGMAA_ICE-GMAAstar-BBFS-QQPOMDPhybrid-GridSmall.sh  runMMDP_QLearner_DT.sh  runPerseus-b0-DT.sh  runPerseus-b1-DT.sh  test_BGIP_IncrementalSolvers.cpp  test_BGIP_Solvers.cpp  test_CGBG_FF.cpp  test_GMAA_MAA_ELSI.cpp  test_GMAA_MAAstar.cpp  test_GMAA_MAAstarCluster.cpp  test_OptimalValue.cpp  test_ProblemFireFightingGraph.cpp  test_bgipsolving.cpp  test_common_functions.h  test_indextools.cpp  test_jpol_index.cpp  (+8 more)
(+126 files in other folders)
